--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@import './globals/styles/colors.css';
+@import './globals/styles/fonts.css';
+
+html {
+  background-color: var(--primary100);
+  font-family: 'Roboto', sans-serif;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
