--- a/src/components/Navbar/NavbarTitle.module.css
+++ b/src/components/Navbar/NavbarTitle.module.css
@@ -1,6 +1,6 @@
 .title {
   font-family: 'TechnoHideo';
-  color: var(--primary700);
+  color: var(--color-primary);
   font-size: 3.5rem;
   margin: 0;
   padding: 0;
@@ -8,7 +8,7 @@
 
 .subtitle {
   font-size: 1rem;
-  color: var(--primary700);
+  color: var(--color-primary);
   font-weight: 700;
   margin: 0;
   padding: 0;
