--- a/src/components/UI/Anchor/Anchor.module.css
+++ b/src/components/UI/Anchor/Anchor.module.css
@@ -7,40 +7,40 @@
 }
 
 .anchor--primary {
-  color: var(--primary700);
+  color: var(--color-primary);
 }
 
 .anchor--primary--solid {
-  color: var(--primary100);
-  background-color: var(--primary700);
+  color: var(--color-primary-contrast);
+  background-color: var(--color-primary);
 }
 
 .anchor--primary--outline {
-  border: 1px solid var(--primary700);
+  border: 1px solid var(--color-primary);
 }
 
 .anchor--secondary {
-  color: var(--secondary700);
+  color: var(--color-secondary);
 }
 
 .anchor--secondary--solid {
-  color: var(--primary100);
-  background-color: var(--secondary100);
+  color: var(--color-secondary-contrast);
+  background-color: var(--color-secondary);
 }
 
 .anchor--secondary--outline {
-  border: 1px solid var(--secondary700);
+  border: 1px solid var(--color-secondary);
 }
 
 .anchor--neutral {
-  color: var(--neutral700);
+  color: var(--color-medium);
 }
 
 .anchor--neutral--solid {
-  color: var(--neutral100);
-  background-color: var(--neutral700);
+  color: var(--color-medium-contrast);
+  background-color: var(--color-medium);
 }
 
 .anchor--neutral--outline {
-  border: 1px solid var(--neutral700);
+  border: 1px solid var(--color-medium);
 }
