--- a/src/components/UI/Anchor/Anchor.module.css
+++ b/src/components/UI/Anchor/Anchor.module.css
@@ -52,6 +52,73 @@
   background-color: rgba(var(--color-secondary-rgb), 0.2);
 }
 
+.anchor--tertiary {
+  color: var(--color-tertiary);
+}
+
+.anchor--tertiary--solid {
+  color: var(--color-tertiary-contrast);
+  background-color: var(--color-tertiary);
+}
+
+.anchor--tertiary--solid:hover {
+  background-color: var(--color-tertiary-shade);
+}
+
+.anchor--tertiary--outline {
+  border: 1px solid var(--color-tertiary);
+}
+
+.anchor--tertiary--outline:hover {
+  background-color: rgba(var(--color-tertiary-rgb), 0.2);
+}
+
+.anchor--success {
+  color: var(--color-success);
+}
+
+.anchor--success--solid {
+  color: var(--color-success-contrast);
+  background-color: var(--color-success);
+}
+
+.anchor--success--solid:hover {
+  background-color: var(--color-success-shade);
+}
+
+.anchor--success--outline {
+  border: 1px solid var(--color-success);
+}
+
+.anchor--success--outline:hover {
+  background-color: rgba(var(--color-success-rgb), 0.2);
+}
+
+.anchor--danger {
+  color: var(--color-danger);
+}
+
+.anchor--danger--solid {
+  color: var(--color-danger-contrast);
+  background-color: var(--color-danger);
+}
+
+.anchor--danger--solid:hover {
+  background-color: var(--color-danger-shade);
+}
+
+.anchor--danger--outline {
+  border: 1px solid var(--color-danger);
+}
+
+.anchor--danger--outline:hover {
+  background-color: rgba(var(--color-danger-rgb), 0.2);
+}
+
+.anchor--secondary {
+  color: var(--color-secondary);
+}
+
 .anchor--neutral {
   color: var(--color-medium);
 }
@@ -72,3 +139,25 @@
 .anchor--neutral--outline:hover {
   background-color: rgba(var(--color-medium-rgb), 0.2);
 }
+
+.anchor--light {
+  color: var(--color-light);
+}
+
+.anchor--light--solid {
+  color: var(--color-light-contrast);
+  background-color: var(--color-light);
+}
+
+.anchor--light--solid:hover {
+  background-color: var(--color-light-shade);
+}
+
+.anchor--light--outline {
+  border: 1px solid var(--color-light);
+}
+
+.anchor--light--outline:hover {
+  background-color: rgba(var(--color-light-rgb), 0.2);
+}
+
