feat: use primary color in the header

--- a/src/components/Navbar/NavbarCart.module.css
+++ b/src/components/Navbar/NavbarCart.module.css
@@ -29,6 +29,6 @@
 }
 
 .cart__badge--color {
-  background-color: var(--color-primary);
-  color: var(--color-primary-contrast);
+  background-color: var(--color-primary-contrast);
+  color: var(--color-primary);
 }
