--- a/src/components/UI/Anchor/Anchor.module.css
+++ b/src/components/UI/Anchor/Anchor.module.css
@@ -2,12 +2,16 @@
   text-decoration: none;
   transition: color 0.2s ease-in-out;
   border-radius: 3px;
-  font-weight: 700;
-  padding: 0.5rem;
+  cursor: pointer;
 }
 
 .anchor-link:hover {
   text-decoration: underline;
+}
+
+.anchor--button {
+  padding: 0.5rem;
+  font-weight: 700;
 }
 
 .anchor--primary {
