refactor: moved the anchor buttons like to the Button widget

--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -6,6 +6,12 @@
   font-weight: 700;
 }
 
+a.button {
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+}
+
 .button:hover {
   cursor: pointer;
 }
