--- a/src/_tests/ButtonTestSection.module.css
+++ b/src/_tests/ButtonTestSection.module.css
@@ -36,10 +36,12 @@
 
 .subsection {
   margin: 1rem 0;
+  display: flex;
+  align-items: center;
 }
 
 .button {
-  margin: 0 20px;
+  margin: 20px;
 }
 
 .title--color--primary {
