--- a/src/components/UI/Anchor/Anchor.module.css
+++ b/src/components/UI/Anchor/Anchor.module.css
@@ -5,163 +5,38 @@
   cursor: pointer;
 }
 
-.anchor-link:hover {
+.anchor:hover {
   text-decoration: underline;
-}
-
-.anchor--button {
-  padding: 0.5rem;
-  font-weight: 700;
 }
 
 .anchor--primary {
   color: var(--color-primary);
 }
 
-.anchor--primary--solid {
-  color: var(--color-primary-contrast);
-  background-color: var(--color-primary);
-}
-
-.anchor--primary--solid:hover {
-  background-color: var(--color-primary-shade);
-}
-
-.anchor--primary--outline {
-  border: 1px solid var(--color-primary);
-}
-
-.anchor--primary--outline:hover {
-  background-color: rgba(var(--color-primary-rgb), 0.2);
-}
-
 .anchor--secondary {
   color: var(--color-secondary);
-}
-
-.anchor--secondary--solid {
-  color: var(--color-secondary-contrast);
-  background-color: var(--color-secondary);
-}
-
-.anchor--secondary--solid:hover {
-  background-color: var(--color-secondary-shade);
-}
-
-.anchor--secondary--outline {
-  border: 1px solid var(--color-secondary);
-}
-
-.anchor--secondary--outline:hover {
-  background-color: rgba(var(--color-secondary-rgb), 0.2);
 }
 
 .anchor--tertiary {
   color: var(--color-tertiary);
 }
 
-.anchor--tertiary--solid {
-  color: var(--color-tertiary-contrast);
-  background-color: var(--color-tertiary);
-}
-
-.anchor--tertiary--solid:hover {
-  background-color: var(--color-tertiary-shade);
-}
-
-.anchor--tertiary--outline {
-  border: 1px solid var(--color-tertiary);
-}
-
-.anchor--tertiary--outline:hover {
-  background-color: rgba(var(--color-tertiary-rgb), 0.2);
-}
-
 .anchor--success {
   color: var(--color-success);
-}
-
-.anchor--success--solid {
-  color: var(--color-success-contrast);
-  background-color: var(--color-success);
-}
-
-.anchor--success--solid:hover {
-  background-color: var(--color-success-shade);
-}
-
-.anchor--success--outline {
-  border: 1px solid var(--color-success);
-}
-
-.anchor--success--outline:hover {
-  background-color: rgba(var(--color-success-rgb), 0.2);
 }
 
 .anchor--danger {
   color: var(--color-danger);
 }
 
-.anchor--danger--solid {
-  color: var(--color-danger-contrast);
-  background-color: var(--color-danger);
-}
-
-.anchor--danger--solid:hover {
-  background-color: var(--color-danger-shade);
-}
-
-.anchor--danger--outline {
-  border: 1px solid var(--color-danger);
-}
-
-.anchor--danger--outline:hover {
-  background-color: rgba(var(--color-danger-rgb), 0.2);
-}
-
-.anchor--secondary {
-  color: var(--color-secondary);
+.anchor--warning {
+  color: var(--color-warning);
 }
 
 .anchor--neutral {
   color: var(--color-medium);
 }
 
-.anchor--neutral--solid {
-  color: var(--color-medium-contrast);
-  background-color: var(--color-medium);
-}
-
-.anchor--neutral--solid:hover {
-  background-color: var(--color-medium-shade);
-}
-
-.anchor--neutral--outline {
-  border: 1px solid var(--color-medium);
-}
-
-.anchor--neutral--outline:hover {
-  background-color: rgba(var(--color-medium-rgb), 0.2);
-}
-
 .anchor--light {
   color: var(--color-light);
 }
-
-.anchor--light--solid {
-  color: var(--color-light-contrast);
-  background-color: var(--color-light);
-}
-
-.anchor--light--solid:hover {
-  background-color: var(--color-light-shade);
-}
-
-.anchor--light--outline {
-  border: 1px solid var(--color-light);
-}
-
-.anchor--light--outline:hover {
-  background-color: rgba(var(--color-light-rgb), 0.2);
-}
-
