--- a/src/pages/app/App.module.css
+++ b/src/pages/app/App.module.css
@@ -1,8 +1,16 @@
-.header {
+@import "../../globals/styles/vars.css";
+
+header {
   background-color: var(--color-primary);
+  padding: var(--app-padding);
 }
 
-.contentPadding {
-  padding: 1rem;
+header > *,
+main > * {
+  max-width: var(--app-max-width);
+  margin: 0 auto;
 }
 
+main {
+  padding: var(--app-padding);
+}
