feat: make the navbar title a link

--- a/src/components/Navbar/NavbarTitle.module.css
+++ b/src/components/Navbar/NavbarTitle.module.css
@@ -1,3 +1,7 @@
+.title__anchor:hover {
+  text-decoration: none;
+}
+
 .title {
   font-family: 'TechnoHideo';
   color: var(--color-primary-contrast);
