--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,28 @@
 @import './globals/styles/colors.css';
 @import './globals/styles/fonts.css';
 
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgba(var(--color-medium-rgb), 0.5);
+  border-radius: var(--app-scrollbar-radius);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(var(--color-medium-rgb), 0.6);
+  border-radius: var(--app-scrollbar-radius);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(var(--color-medium-rgb), 0.9);
+}
+
 html {
   background-color: var(--primary100);
   font-family: 'Roboto', sans-serif;
