feat: added text wrapping to the Card title and subtitle

--- a/src/components/UI/Card/CardHeading.module.css
+++ b/src/components/UI/Card/CardHeading.module.css
@@ -6,6 +6,13 @@
   margin: 0;
   padding: 0;
   font-size: 1.5rem;
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  white-space: pre-wrap;
 }
 
 .heading__subtitle {
@@ -13,4 +20,7 @@
   margin: 0;
   padding: 0;
   color: var(--color-medium);
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
