--- a/src/globals/styles/colors.css
+++ b/src/globals/styles/colors.css
@@ -1,17 +1,17 @@
 :root {
-	--color-primary: #3880ff;
-	--color-primary-rgb: 56,128,255;
+	--color-primary: #30479c;
+	--color-primary-rgb: 48,71,156;
 	--color-primary-contrast: #ffffff;
 	--color-primary-contrast-rgb: 255,255,255;
-	--color-primary-shade: #3171e0;
-	--color-primary-tint: #4c8dff;
+	--color-primary-shade: #2a3e89;
+	--color-primary-tint: #4559a6;
 
-	--color-secondary: #8652ff;
-	--color-secondary-rgb: 134,82,255;
+	--color-secondary: #2a38d7;
+	--color-secondary-rgb: 42,56,215;
 	--color-secondary-contrast: #ffffff;
 	--color-secondary-contrast-rgb: 255,255,255;
-	--color-secondary-shade: #7648e0;
-	--color-secondary-tint: #9263ff;
+	--color-secondary-shade: #2531bd;
+	--color-secondary-tint: #3f4cdb;
 
 	--color-tertiary: #5260ff;
 	--color-tertiary-rgb: 82,96,255;
@@ -20,22 +20,22 @@
 	--color-tertiary-shade: #4854e0;
 	--color-tertiary-tint: #6370ff;
 
-	--color-success: #1daa55;
-	--color-success-rgb: 29,170,85;
+	--color-success: #099641;
+	--color-success-rgb: 9,150,65;
 	--color-success-contrast: #ffffff;
 	--color-success-contrast-rgb: 255,255,255;
-	--color-success-shade: #1a964b;
-	--color-success-tint: #34b366;
+	--color-success-shade: #088439;
+	--color-success-tint: #22a154;
 
-	--color-warning: #ffc409;
-	--color-warning-rgb: 255,196,9;
+	--color-warning: #c8a941;
+	--color-warning-rgb: 200,169,65;
 	--color-warning-contrast: #000000;
 	--color-warning-contrast-rgb: 0,0,0;
-	--color-warning-shade: #e0ac08;
-	--color-warning-tint: #ffca22;
+	--color-warning-shade: #b09539;
+	--color-warning-tint: #ceb254;
 
 	--color-danger: #eb445a;
-	--color-danger-rgb: 235,68,90;
+	--color-danger-rgb: 195,28,50;
 	--color-danger-contrast: #ffffff;
 	--color-danger-contrast-rgb: 255,255,255;
 	--color-danger-shade: #cf3c4f;
