--- a/src/pages/app/shared/Items/ItemListContainer.module.css
+++ b/src/pages/app/shared/Items/ItemListContainer.module.css
@@ -12,6 +12,12 @@
   overflow: auto;
 }
 
+.itemList__spinnerContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+}
+
 .itemList__item {
   width: 30%;
   margin: 0.75rem;
